WIP: Fixing issues

--- a/example_notebooks/02_noise_acquisition.ipynb
+++ b/example_notebooks/02_noise_acquisition.ipynb
@@ -22,19 +22,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-10 11:32:04.832930: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-02-11 03:02:41.936644: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1739208724.855758 3564126 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1739208724.862821 3564126 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-10 11:32:04.886561: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "E0000 00:00:1739264562.599630 3423805 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1739264562.746894 3423805 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-11 03:02:45.461474: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.0.5\n"
      ]
     }
    ],
@@ -44,30 +37,11 @@
     "from itertools import islice\n",
     "\n",
     "# Dependency imports: \n",
-    "import tensorflow as tf\n",
     "from bokeh.io import show, output_notebook\n",
     "from bokeh.layouts import gridplot\n",
     "\n",
     "# Import the GravyFlow module:\n",
     "import gravyflow as gf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup Environment:\n",
-    "\n",
-    "As described in the first notebook, we should set up the environment using `gf.env` to ensure we work on an available GPU. This is crucial because GravyFlow is optimized for GPU-based computations, significantly accelerating data processing and analysis. Ensuring that a GPU is available and properly configured allows us to fully leverage this computational power, which is especially important when working with large datasets or complex machine learning models."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up the environment using gf.env() and return a tf.distribute.Strategy object.#env : tf.distribute.Strategy = gf.env()"
    ]
   },
   {
@@ -104,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,19 +194,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "No GPUs avalible as they were too busy or non-existant.",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "All GPUs are currently busy or do not meet the memory requirements:\n",
+      "GPU   Total (MB)   Used (MB)    Free (MB)    Util (%)  \n",
+      "-------------------------------------------------------\n",
+      "0     16384        15806        \u001b[31m339         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "1     16384        15806        \u001b[31m339         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "2     16384        15806        \u001b[31m339         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "3     16384        15806        \u001b[31m339         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "4     16384        15806        \u001b[31m339         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "5     16384        15806        \u001b[31m339         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "6     16384        15814        \u001b[31m331         \u001b[0m \u001b[31m    96.5%\u001b[0m\n",
+      "7     16384        13468        \u001b[31m2677        \u001b[0m \u001b[31m    82.2%\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "All GPUs are busy or insufficient memory is available.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Using the environment 'env' created earlier with gf.env()\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m gf\u001b[38;5;241m.\u001b[39menv():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m# Generate white noise by calling the white_noise object with one example per \u001b[39;00m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# batch. The next() function is used to retrieve the generated noise data.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     white_onsource, white_offsource, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\n\u001b[1;32m      6\u001b[0m         white_noise(num_examples_per_batch\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      7\u001b[0m     )\n",
-      "File \u001b[0;32m~/gravyflow/gravyflow/src/utils/gpu.py:260\u001b[0m, in \u001b[0;36menv\u001b[0;34m(min_gpu_memory_mb, max_gpu_utilization_percentage, num_gpus_to_request, memory_to_allocate_tf, gpus)\u001b[0m\n\u001b[1;32m    253\u001b[0m     gpus \u001b[38;5;241m=\u001b[39m find_available_GPUs(\n\u001b[1;32m    254\u001b[0m         min_memory_MB\u001b[38;5;241m=\u001b[39mmin_gpu_memory_mb, \n\u001b[1;32m    255\u001b[0m         max_utilization_percentage\u001b[38;5;241m=\u001b[39mmax_gpu_utilization_percentage,\n\u001b[1;32m    256\u001b[0m         max_needed\u001b[38;5;241m=\u001b[39mnum_gpus_to_request\n\u001b[1;32m    257\u001b[0m     )\n\u001b[1;32m    259\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m gpus:\n\u001b[0;32m--> 260\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo GPUs avalible as they were too busy or non-existant.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    261\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(gpus) \u001b[38;5;241m<\u001b[39m num_gpus_to_request:\n\u001b[1;32m    262\u001b[0m     logging\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not allocate requested number of GPUs (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_gpus_to_request\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) as they were too busy or non-existant. Allocated \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(gpus)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mException\u001b[0m: No GPUs avalible as they were too busy or non-existant."
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Using the environment 'env' created earlier with gf.env()\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m gf\u001b[38;5;241m.\u001b[39menv():\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;66;03m# Generate white noise by calling the white_noise object with one example per \u001b[39;00m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m# batch. The next() function is used to retrieve the generated noise data.\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     white_onsource, white_offsource, _ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\n\u001b[1;32m      6\u001b[0m         white_noise(num_examples_per_batch\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      7\u001b[0m     )\n",
+      "File \u001b[0;32m~/gravyflow/gravyflow/src/utils/gpu.py:266\u001b[0m, in \u001b[0;36menv\u001b[0;34m(min_gpu_memory_mb, max_gpu_utilization_percentage, num_gpus_to_request, memory_to_allocate_tf, gpus)\u001b[0m\n\u001b[1;32m    264\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgpus should be int, str, or list/tuple of int or str\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    265\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 266\u001b[0m     gpus \u001b[38;5;241m=\u001b[39m find_available_GPUs(\n\u001b[1;32m    267\u001b[0m         min_memory_MB\u001b[38;5;241m=\u001b[39mmin_gpu_memory_mb,\n\u001b[1;32m    268\u001b[0m         max_utilization_percentage\u001b[38;5;241m=\u001b[39mmax_gpu_utilization_percentage,\n\u001b[1;32m    269\u001b[0m         max_needed\u001b[38;5;241m=\u001b[39mnum_gpus_to_request\n\u001b[1;32m    270\u001b[0m     )\n\u001b[1;32m    272\u001b[0m available_gpu_list \u001b[38;5;241m=\u001b[39m gpus\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mif\u001b[39;00m gpus \u001b[38;5;28;01melse\u001b[39;00m []\n\u001b[1;32m    273\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m available_gpu_list:\n",
+      "File \u001b[0;32m~/gravyflow/gravyflow/src/utils/gpu.py:220\u001b[0m, in \u001b[0;36mfind_available_GPUs\u001b[0;34m(min_memory_MB, max_utilization_percentage, max_needed)\u001b[0m\n\u001b[1;32m    218\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mAll GPUs are currently busy or do not meet the memory requirements:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    219\u001b[0m     print_gpu_status(min_required_memory\u001b[38;5;241m=\u001b[39mmin_memory_MB)\n\u001b[0;32m--> 220\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll GPUs are busy or insufficient memory is available.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    222\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m max_needed \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    223\u001b[0m     available \u001b[38;5;241m=\u001b[39m available[:max_needed]\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: All GPUs are busy or insufficient memory is available."
      ]
     }
    ],
